# youtubeAnalyzer

./: .env.example  .env.prod.example  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  TEST_RESULTS.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_api_verification.py  test_comment_extraction.py  test_integration.py  test_simple.py  test_youtube_basic.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  analysis.py  export.py  websocket.py
backend/app/core/: celery.py  celery_app.py  config.py  database.py  logging.py  logging_config.py
backend/app/models/: __init__.py  schemas.py  task.py
backend/app/monitoring/: metrics.py
backend/app/services/: analysis_orchestrator.py  comment_analyzer.py  content_analyzer.py  task_service.py  tasks.py  transcription_service.py  youtube_extractor.py
backend/app/tasks/: analysis_task.py  comment_analysis.py  content_analysis.py  transcription.py
backend/app/utils/: exceptions.py  storage.py
backend/tests/: conftest.py  test_api.py  test_comment_analyzer.py  test_config.py  test_content_analysis_tasks.py  test_content_analyzer.py  test_transcription_service.py  test_transcription_tasks.py  test_websocket.py  test_youtube_extractor.py
docs/: API_SPECIFICATIONS.md  ARCHITECTURE_OVERVIEW.md  CODING_STANDARDS.md  CONTAINER_DEBUGGING_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_SETUP.md  PROGRESS_TRACKER.md  TASK_COORDINATION.md
docs/contracts/: README.md  api_framework_contract.md  comment_analysis_contract.md  content_analysis_contract.md  frontend_framework_contract.md  orchestrator_contract.md  project_config_contract.md  result_display_contract.md  transcription_contract.md  youtube_data_contract.md
docs/prompts/: INTEGRATION_TEST_PHASE1_PROMPT.md  INTEGRATION_TEST_PHASE2_PROMPT.md  INTEGRATION_TEST_PHASE3_PROMPT.md  TASK_01_PROJECT_SETUP_PROMPT.md  TASK_02_BACKEND_API_PROMPT.md  TASK_03_FRONTEND_UI_PROMPT.md  TASK_04_YOUTUBE_EXTRACTION_PROMPT.md  TASK_05_AUDIO_TRANSCRIPTION_PROMPT.md  TASK_06_CONTENT_ANALYSIS_PROMPT.md  TASK_07_COMMENT_ANALYSIS_PROMPT.md  TASK_08_ANALYSIS_ORCHESTRATOR_PROMPT.md  TASK_09_RESULT_DISPLAY_PROMPT.md  TASK_10_DEPLOYMENT_PROMPT.md
docs/tasks/: TASK_01_PROJECT_SETUP.md  TASK_02_BACKEND_API.md  TASK_03_FRONTEND_UI.md  TASK_04_YOUTUBE_EXTRACTION.md  TASK_05_AUDIO_TRANSCRIPTION.md  TASK_06_CONTENT_ANALYSIS.md  TASK_07_COMMENT_ANALYSIS.md  TASK_08_ANALYSIS_ORCHESTRATOR.md  TASK_09_RESULT_DISPLAY.md  TASK_10_DEPLOYMENT.md
frontend/: .env.local.example  .eslintrc.json  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx  LoadingState.tsx  NotificationContainer.tsx
frontend/src/config/: index.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/store/: analysisStore.ts
frontend/src/styles/: components.css
frontend/src/types/: analysis.ts  api.ts  ui.ts
frontend/src/utils/: api.ts  export.ts
nginx/: nginx.conf
scripts/: debug_containers.sh  deploy.sh  health_check.sh
tests/: test_analysis_orchestrator.py
tests/integration/phase1/: CONTAINER_STABILITY_REPORT.md  PHASE1_TEST_REPORT.md  PHASE1_TEST_SUMMARY.md  __init__.py  conftest.py  pytest.ini  test_api_frontend_integration.py  test_concurrent.db  test_configuration_integration.py  test_crud.db  test_database_integration.py  test_database_simple.py  test_docker_integration.py  test_init.db  (+5 more)
(+38 files in other folders)
